# invoice_program

./: .gitignore  README.md  command_line.py  handling_customers.py  invoice.db  invoice.py  invoices.db  load_database.py  logistics.py  main.py  migration.py  output.txt  requirements.txt  setup.cfg  setup.py  tests.py  working_data.py
database_tools/: handling_data.py
handlers/: __init__.py  customer_handler.py  invoice_handler.py  product_handler.py  products_invoice_handler.py
interface/: customer_interface.py  customer_menus.py  invoice_creation_interface.py  invoice_interface.py  invoice_menus.py  product_interface.py  product_menus.py
invoice/: LICENSE  invoice_template.py
invoice/api_setup/: invoice_api.py
invoice/handlers/: customer_handler.py  invoice_handler.py  product_handler.py  products_invoice_handler.py
invoice_program.egg-info/: PKG-INFO  SOURCES.txt
models/: __init__.py  connection_database.py  create_schema.py  customer.py  invoice.py  invoice_model.py  invoices.db  migration.py  product.py  products_invoice.py
my_test_suite/: test.py
src/: invoice_template.py  main.py
tests/: string_testing.py  test.py  test_1.py  test_customer_menu.py  test_invoice_menu.py  test_product_menu.py  test_sqlalchemy.py  test_sqlalchemy_2.py  test_sqlalchemy_complete.py  test_sqlalchemy_connection.py  test_sqlalchemy_customer.py  test_sqlalchemy_invoice.py  test_sqlalchemy_product.py
utils/: create_table.py  customer_messages.py  flatten_list.py  invoice_menu.py  invoice_messages.py  mode_message.py  product_messages.py  quit.py  session_utils.py
(+28 files in other folders)
