[metadata]
name = invoice_generator
version = 0.1.0
author = Robin Borgstr_m
description = Billing program
long_description = README.md
long_description_conent_type = text/markdown
url = https://github.com/robinborg/invoice_program
classifiers =
  Programming Language :: Python :: 3
	License :: OSI Approved :: MIT License
	Operating System :: OS Independent

[options]
package_dir = 
  = src
packages = find:
python_requires = >=3.8

[options.packages.find]
where=src
